# Palleria-dev

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle  opencode.json  settings.gradle
.github/workflows/: codeql.yml  fdroid.yml  rust.yml
app/: Palleria_development_blog.md  Palleria_development_blog_2.md  build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/src/main/: AndroidManifest.xml
fdroid/metadata/: com.yunfie.illustia.yml
gradle/wrapper/: gradle-wrapper.properties
repo/: entry.json  index-v1.json  index-v2.json  index.html  index.xml
repo/status/: running.json  update.json
rust/: README.md
rust/pixiv-api/: Cargo.toml
rust/pixiv-api/benches/: illust_decode.rs
rust/pixiv-api/benches/fixtures/: illust.json
rust/pixiv-api/src/: error.rs  image_analysis.rs  lib.rs  models.rs  temp_path.rs  ugoira.rs
rust/pixiv-api/src/client/: endpoints.rs  mod.rs  oauth.rs  transport.rs  ugoira_download.rs
rust/pixiv-api/src/models/: dto.rs
rust/pixiv-api/src/models/dto/: activity.rs  illust.rs  mod.rs  novel.rs  series.rs  tests.rs  user.rs
rust/pixiv-api/src/models/ffi/: activity.rs  common.rs  illust.rs  mod.rs  novel.rs  series.rs  user.rs
tmp/: apkcache.json  repo_1782055950000.json  repo_1782140246000.json  repo_1782205352000.json  repo_1782731790000.json  repo_1783147899000.json  repo_1784274791000.json  repo_1784300010000.json  repo_1784301206000.json  repo_1784435921000.json  repo_1784457081000.json  repo_1784897670000.json
(+149 files in other folders)
